# MINER-MAY-2026

./: .gitignore  .htaccess  PROJECT_STRUCTURE.md  README.md  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/: dependabot.yml
Strategy Documents/Custom Math/: COMPREHENSIVE_SESSION_SUMMARY.md  debug_div_frac.c  debug_div_fractional  deep_file_analysis.py  extended_platonic_solids.csv  extract_questions.py  final_integration_test  fix_thesis_structure.sh  fix_unused_params.sh  insert_all_sections.sh  integrate_section.py  migrate_app_cllm_integration.sh  reorganize_thesis.sh  test_6point0_div_2.c  test_pool_threads.c
Strategy Documents/PYTHON STRAT/: STRATEGY.txt
Strategy Documents/Python Strategy 1 /: README.md  strategy.py
archive/source-projects/14 MARCH PROJECT /Math A /gnuradio/gr-recovery/lib/: CMakeLists.txt  signal_recovery_block_impl.h
archive/source-projects/14 MARCH PROJECT /STRAT A/Strategy Documents/Custom Math/gnuradio/gr-recovery/: CMakeLists.txt
archive/source-projects/14 MARCH PROJECT /STRAT A/Strategy Documents/Custom Math/gnuradio/gr-recovery/lib/: signal_recovery_block_impl.cc
backend/: README.md  requirements.txt
backend/api/: .env.example  README.md  db.js  init-db.js  package-lock.json  package.json  schema.sql  server.js  server.test.js
backend/miner_server/: MINER_BEHAVIOR_ANALYSIS.md  README.md  UI_REALTIME_PLAN.md  address.py  backtest_last_100_blocks.py  backtest_self_check.py  btc_rpc.py  (+28 more)
config/: nginx.conf
docs/: CLEANUP_SUMMARY.md  FORMULA_REFINEMENTS.md  ORGANIZATION_SUMMARY.md  PRIME_TOWER_UPDATE.md  PROJECTION_IMPROVEMENTS.md  README.md  TRADING_BOT.md
public/: .htaccess  manifest.webmanifest
scripts/: REMOTE-POSTGRES-SETUP.md  START-STOP.md  connect-remote-postgres.sh  deploy.sh  kill-all-dev.sh  resolve-conflict.sh  run-dev.sh  run-sentiment-api.sh  server-fix.sh  setup-sentiment.sh  smoke-budget-tracker.js  smoke-trading-bot-api.js  start-miner-server.js  start-trading-bot-server.js  update-htaccess.js  verify-build.js
src/: App.jsx  index.css  main.jsx
(+3253 files in other folders)
